# dotdrop

./: .git-blame-ignore-revs  .gitignore  pyproject.toml  python-cymagic.txz  setup.cfg  tests.sh
.github/workflows/: testing.yml
docs/: windows-progress.md
dotdrop/: defaults.py  types.py
tests/: conftest.py  test_testpath.py  test_version.py
