# NOTE: author email I think is meant to be non-deliverable, but currently
# points to a real domain name that is currently registered, and is unlikely to
# be owned by the same people
#
# author_email -> deadc0de6@foo.bar
#   [whois.nic.bar]
#   Domain Name: FOO.BAR
#   Registry Domain ID: D2625196-CNIC
#   Registrar WHOIS Server: whois.nic.bar
#   Registrar URL: http://www.punto2012.com/
#   Updated Date: 2021-05-08T00:08:12.0Z
#   Creation Date: 2014-05-14T14:58:15.0Z
#   Registry Expiry Date: 2022-05-14T23:59:59.0Z
#   Registrar: PUNTO 2012 S.A.P.I. de C.V.
#   Registrar IANA ID: 9999
#   Domain Status: ok https://icann.org/epp#ok
#
# It's also not listed in commit attributions, according to:
# git log --all --format="%an -- %ae" | sort | uniq | grep -F deadc0de
# deadc0de -- deadc0de6@users.noreply.github.com
# deadc0de6 -- info@deadc0de.ch

[metadata]
name = dotdrop
version = attr:dotdrop.version.__version__

url = https://github.com/mawillcockson/dotdrop
# NOTE: Is this needed?
# download_url = https://github.com/deadc0de6/dotdrop/archive/v + version + .tar.gz
# project_urls = 
#     Documentation=https://dotdrop.readthedocs.io/

author = Matthew W
author_email = 6712121+mawillcockson@users.noreply.github.com

classifiers = 
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

license = GPLv3
# NOTE: not needed as the default is:
# LICEN[CS]E*, COPYING*, NOTICE*, AUTHORS*
license_files = 
    LICENSE

description = Save your dotfiles once, deploy them everywhere
long_description = file:README.md
long_description_content_type = text/markdown; variant=GFM
keywords = 
    dotfiles
    jinja2

platforms = 
    #

[bdist_wheel]
python-tag = py3

[files]
extra_files =
    LICENSE
    README.md

[options]
packages = dotdrop
include_package_metadata = true
install_requires = 
    pydantic

python_requires = >=3.7,<4.0

[options.packages.find]
exclude = 
    .github*
    docs*
    packages*
    tests*

[options.extras_require]
dev = 
    check-manifest
test = 
    tox

[options.entry_points]
console_scripts = 
    dotdrop = dotdrop:main
